--- a/.brewfile/Brewfile
+++ b/.brewfile/Brewfile
@@ -1,7 +1,33 @@
-tap 'caskroom/cask'
-cask "google-chrome"
-cask "java" unless system "/usr/libexec/java_home --failfast"
-cask "firefox", args: { appdir: "~/my-apps/Applications" }
-brew 'zsh'
+# install scripts
 brew 'mas'
 brew 'zplug'
+brew 'wget'
+brew 'rbenv'
+
+# get brew cask for apps
+tap 'caskroom/cask'
+
+# install the apps
+cask 'google-chrome'
+cask 'firefox'
+cask 'java' unless system "/usr/libexec/java_home --failfast"
+cask 'iterm2'
+cask 'alfred'
+cask 'slack'
+cask 'hammerspoon'
+
+# App Store applications
+# for office
+mas 'PopClip (1.5.7)', id: 445189367
+mas 'iMovie (10.1.6)', id: 408981434
+mas 'GarageBand (10.2.0)', id: 682658836
+mas 'Pages (6.2)', id: 409201541
+mas 'Keynote (7.2)', id: 409183694
+mas 'Slack (2.6.2)', id: 803453959
+mas 'Magnet (2.1.0)', id: 441258766
+mas 'Numbers (4.2)', id: 409203825
+mas 'FreeMemory Pro (1.9.1)', id: 486967844
+mas 'SmartStop (1.0)', id: 445668263
+mas 'FreeMemory Pro (1.9.1)', id: 486967844
+
+# for private
