--- a/.brewfile/Brewfile
+++ b/.brewfile/Brewfile
@@ -3,6 +3,7 @@ brew 'mas'
 brew 'zplug'
 brew 'wget'
 brew 'rbenv'
+brew 'postgresql'
 
 # get brew cask for apps
 tap 'caskroom/cask'
@@ -18,6 +19,7 @@ cask 'hammerspoon'
 cask 'slack'
 cask 'sequel-pro'
 cask 'visual-studio-code'
+cask 'eclipse-platform'
 
 # App Store applications
 # for office
@@ -31,5 +33,6 @@ mas 'Numbers (4.2)', id: 409203825
 mas 'FreeMemory Pro (1.9.1)', id: 486967844
 mas 'SmartStop (1.0)', id: 445668263
 mas 'FreeMemory Pro (1.9.1)', id: 486967844
+mas 'Amphetamine (3.0.2)', id: 937984704
 
 # for private
