--- a/bundle/config
+++ b/bundle/config
@@ -5,3 +5,4 @@ BUNDLE_GEM__TEST: "rspec"
 BUNDLE_GEM__MIT: "true"
 BUNDLE_GEM__COC: "true"
 BUNDLE_PATH: "vendor/bundle"
+BUNDLE_BUILD__MYSQL2: "--with-ldflags=-L/usr/local/opt/openssl/lib --with-cppflags=-I/usr/local/opt/openssl/include"
